# django_homeworks

./: .env.template  README.md  pyproject.toml
accounts_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts_app/migrations/: 0001_initial.py  0002_alter_user_managers_user_is_email_verify.py
blog_app/: admin.py  apps.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py  0002_article_author_email.py  0003_remove_article_author_email_article_author.py
config/: settings.py  urls.py
main/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_preview_image.py
main/models/: store.py
main/templatetags/: inclusion_tags.py  product_image_filter.py
main_app/: admin.py  apps.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py
static/css/: style.css
store_app/: admin.py  apps.py  forms.py  urls.py  utils.py  views.py
store_app/admin/: __init__.py  admin_category.py  admin_product.py  admin_product_version.py  admin_word_filter.py
store_app/forms/: __init__.py  forms_product.py  forms_product_version.py
store_app/migrations/: 0001_initial.py  0002_alter_product_preview_image.py  0002_contact.py  0003_alter_product_preview_image.py  0003_wordfilter.py  0004_productversion.py  0005_product_seller.py  0006_alter_product_options_product_is_published.py  0007_alter_product_options.py
store_app/models/: __init__.py  product.py  product_category.py  product_version.py  store.py  (+1 more)
tasks/: send_mail.py
utils/: hash_storage.py
(+52 files in other folders)
