[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Ильдар Галеев <ildar-galeev92@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
django-widget-tweaks = "^1.5.0"
django-rename-app = "^0.1.7"
python-lorem = "^1.3.0.post1"
pytils = "^0.4.1"
django4-background-tasks = "^1.2.9"
environs = {extras = ["django"], version = "^10.0.0"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
